--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,17 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalnia:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
-* {
+*{
+  box-sizing: border-box;
+  font-family: 'Righteous';
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+}
+html{
+  /* me permite hacer un desliz cuando hago clic en los links */
+  scroll-behavior: smooth;
+}
+.contenedor-header{
+  background: #1e2326;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 99;
 }
 
-body {
-  font-family: 'kalnia', sans-serif;
-  overflow-x: hidden;
-  background-color: #E8A6E9;
+.contenedor-header header {
+  max-width: 1100px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
 }
 
-.color {
-  color: ghostwhite;
+.contenedor-header header .logo a{
+  font-family: 'Righteous';
+  font-size: 36px;
+  color: #1cb698;
+  text-decoration: none;
+}
+
+.contenedor-header header ul {
+  display: flex;
+  list-style: none;
+}
+
+.contenedor-header header nav ul li a{
+  text-align: none;
+  color: #fff;
+  margin: 0 15px;
+  padding: 3px;
+  transition: .20s;
+  text-decoration: none;
+}
+/* "hover" me permite que cuando haga un evento de pasar el cursos me lo colore del color marcado*/
+.contenedor-header header nav ul li a:hover{
+  color:#1CB698;
+}
+
+.nav-responsive{
+  background-color: #1CB698;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: none;
+  
 }
