--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -60,5 +60,11 @@ html{
   border-radius: 5px;
   cursor: pointer;
   display: none;
-  
+}
+
+.editable-imagen{
+  width: 15%;
+  height: 15%;
+  border-radius: 50%;
+  margin: 70px 70px 70px 70px;
 }
