--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -51,6 +51,7 @@ html{
 /* "hover" me permite que cuando haga un evento de pasar el cursos me lo colore del color marcado*/
 .contenedor-header header nav ul li a:hover{
   color:#1CB698;
+
 }
 
 .nav-responsive{
@@ -63,8 +64,27 @@ html{
 }
 
 .editable-imagen{
-  width: 15%;
-  height: 15%;
-  border-radius: 50%;
-  margin: 70px 70px 70px 70px;
+  padding: 20px;
+  background-color: #1e2326;
+  max-width: 350px;
+  margin: auto;
+  border-radius: 300px;
+}
+
+
+.inicio{
+  background:linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),url(./images/fotofondo.jpg); /*TENGO UN ERROR EN LA IMAGEN NO ME LO MUESTRA */
+  background-size: cover;
+  height: 100vh;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+
+.inicio .contenedor-banner{
+  padding: 20px;
+  background-color: #1e2326;
+  max-width: 350px;
+  margin: auto;
+  border-radius: 40px;
 }
